tests/testcases/valid/control_flow/07_switch_unique_cases.ciel
// Test: valid switch with unique literal case values

int main() {
    int x = 5;

    // Valid: all unique literal case values
    switch (x) {
        case 0: {
            x = 0;
            break;
        }
        case 1: {
            x = 10;
            break;
        }
        case 2: {
            x = 20;
            break;
        }
        case 3: {
            x = 30;
            break;
        }
        case 5: {
            x = 50;
            break;
        }
        case 10: {
            x = 100;
            break;
        }
        default: {
            x = -1;
            break;
        }
    }

    return 0;
}
